Translation work begins for the next folder.

--- a/japan/sonic3d.1
+++ b/japan/sonic3d.1
@@ -1,11 +1,11 @@
-<html><title>Sonic 3D flickies' island</title>
+<html><title>Sonic 3D: Flickies' Island</title>
 <body bgcolor="#ffffff">
 
 <center>
 
 <table width="620">
 <tr><td align="center" colspan=2 bgcolor="#ff0000" height=32><font size=4 color="#ffffff"><b>
-『SONIC3D  FLICKIES' ISLAND』
+Sonic 3D: Flickies' Island
 </b></font></td></tr></table>
 <p>
 
@@ -14,17 +14,17 @@
     </div>
   <tr>
     <td height=60 colspan=2>
-      <div align="center"><font color="#ff0000" size=2> 『ソニック３Ｄ　フリッキーアイランド』<br>
-        <BLINK>対応機種：セガサターン</BLINK><br>
-        発売日：1999年10月14日<br>
-        価格：\3,800（税込 \3,990）</font><br>
+      <div align="center"><font color="#ff0000" size=2> Sonic 3D: Flickies' Island<br>
+        <BLINK>Supported models: Sega Saturn</BLINK><br>
+        Release date: October 14, 1999<br>
+        Price: \3,800 (\3,990 including tax)</font><br>
       </div>
       <P align="center"> <a href="http://www.d-direct.ne.jp/"> </a><a href="http://www.d-direct.ne.jp/"><font color="#ff0000"><blink></blink></font></a><br>
-      <P align="center"> <font color="#0000ff" font size=4>■ 幻のセガサターン版『ソニック３Ｄ』　遂に登場！ 
+      <P align="center"> <font color="#0000ff" font size=4>■ Sonic 3D for the Sega Saturn is finally here! 
         ■</font><br>
-      <P align="center"> 日本のソニックファンのみなさん、たいへんお待たせしました！<br>
-        アメリカやヨーロッパで発売されていた『ソニック３Ｄ』が、いよいよ日本のみなさんへお届けできることになりました。<br>
-        なんと、ドリームキャストの『ソニックアドベンチャー・インターナショナル』と同時発売です！<br>
+      <P align="center"> Sonic fans in Japan have been waiting a long time!<br>
+        After being released in the US and Europe, Sonic 3D is finally ready to be delivered to people in Japan.<br>
+        Oh, and it's being released at the same time as Sonic Adventure International on the Dreamcast!<br>
       <p align="center"> 
       <hr width=60% align="center">
       <p align="center"> 
@@ -38,23 +38,23 @@
           </tr>
         </table>
       </div>
-      <p align="center"> <font color="#0000ff" font size=4>■ フリッキーたちをDr.エッグマンから守れ！ 
+      <p align="center"> <font color="#0000ff" font size=4>■ Protect Flickies from Dr. Robotnik! 
         ■</font><br>
-      <P align="center"> 「カオスエメラルド―――神秘の力を持つ、美しい宝石」<br>
-      <P align="center"> ある日、ソニックとテイルス、そしてナックルズたちはミステリアスな島<font color="#ff00ff">“フリッキーアイランド”</font>を訪れました。<br>
-        言い伝えによると、この島には<font color="#ff00ff">“カオスエメラルド”</font>が眠っていると言います。<br>
-        ソニック達はまずはじめにその宝石の手がかりとなる<font color="#ff00ff">“フリッキー”</font>という鳥を探すことにしました。<br
+      <P align="center"> Chaos Emerald - A beautiful gem with mystical powers.<br>
+      <P align="center"> One day, Sonic, Tails, and Knuckles are on a mysterious island.<font color="#ff00ff">"Flicky Island"</font>was its name.<br>
+        According to legend, the<font color="#ff00ff">Chaos Emeralds</font>lie dormant on this island.<br>
+        The first thing Sonic and his friends decided to do was to look for birds called <font color="#ff00ff">Flickies</font>, which were the clues to the gems.<br
 >
-      <P align="center"> しかし、そのころはるか離れた上空に、不気味に浮かぶスパイ衛星が･･･<br>
-        「ついに見つけたぞ、カオスエメラルドの眠る<font color="#ff00ff">“フリッキーアイランド”</font>！」<br>
-        どこかで聞いたこのダミ声･･･そう、悪の天才科学者<font color="#ff00ff">“Dr.エッグマン”</font>です！<br>
-      <P align="center"> はたしてソニックはフリッキーたちを救出し、カオスエメラルドをDr.エッグマンより先に見つけ出せるでしょうか･･･？<br>
+      <P align="center"> But at the same time, a spy satellite hovers eerily in the sky, far away.<br>
+        "I've finally found Flicky Island, home of the <font color="#ff00ff">Chaos Emeralds</font>!"<br>
+        I've heard that dumb voice before... yes, it's the evil genius scientist, <font color="#ff00ff">Dr. Robotnik</font>!<br>
+      <P align="center"> Will Sonic be able to rescue the Flickies and find the Chaos Emeralds before Dr. Robotnik does?<br>
       <p align="center"> <a href="sonic3d/sonic3d_image.html"> <IMG border=0 SRC="sonic3d/01_eps.jpg"></a><BR>
-        <font size=4 FONT COLOR="RED"> <A HREF="sonic3d/sonic3d_image.html">『SONIC3D』の画面サンプルへＧＯ！</A></FONT><BR>
+        <font size=4 FONT COLOR="RED"> <A HREF="sonic3d/sonic3d_image.html">Go to Sonic 3D screen shots!</A></FONT><BR>
       <table width="620" align="center">
         <tr><td height=16 colspan=2></td>
 <tr><td align="center" colspan=2 bgcolor="red"><font size=2 color="#ffffff">
-｜　Presented By 　<b>SONIC TEAM 1999</b>　｜
+｜　Presented By 　<b>Sonic Team 1999</b>　｜
 </font></td>
 
 </table>
