--- a/japan/sonicr.1
+++ b/japan/sonicr.1
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>
-sonic r
+Sonic R
 </title>
 </head>
 <body bgcolor="yellow" text="black" link="red" vlink="red">
@@ -11,70 +11,69 @@ sonic r
 <table border="0">
 <tr>
 <td>
-　タイトル　
+　Title
 </td>
 <td>
-ＳＯＮＩＣ　Ｒ
-</td>
-</tr>
-
-<tr>
-<td>
-　ジャンル　
-</td>
-<td>
-レーシングアクション
+Sonic R
 </td>
 </tr>
 
 <tr>
 <td>
-　ハード　
+　Genre　
 </td>
 <td>
-セガサターン及びその互換機
+Racing, Action
+</td>
 </tr>
 
 <tr>
 <td>
-　発売日　
+　Hardware　
 </td>
 <td>
-1997年12月4日</td>
+Sega Saturn and its compatible devices.
+</tr>
+
+<tr>
+<td>
+　Release date　
+</td>
+<td>
+December 4, 1997</td>
 </tr>
 
 <tr>
 <td valign="top">
-　対応周辺機器予定　
+　Supported peripherals　
 </td>
 <td valign="top">
-コントロールパッド<br>
-セガマルチコントローラー<br>
-パワーメモリー
+Control Pad<br>
+Sega Multi-Controller<br>
+Power Memory
 </td>
 </tr>
 </table>
 
 
 <hr size="4" width="320">
-<a href="sonicr/r/rstory.html" target="_top"><font size="2"><strong>&lt;&lt; ストーリー &gt;&gt;</strong></font></a><br>
+<a href="sonicr/r/rstory.html" target="_top"><font size="2"><strong>&lt;&lt; Story &gt;&gt;</strong></font></a><br>
 <br>
 <table width="500"><td bgcolor="red" align="left"><font color="white">
-<b>　ゲームの特徴　</b></font>
+<b>　Game Features　</b></font>
 </td>
 </table>
 <br>
 <table width="500">
 <tr>
-      <td> ● <font color="red"><b><a href="sonicr/r/rchara.html">ソニックをはじめとしたソニックファミリーが登場</a></b></font><b>するアクションレース</b> 
+      <td> ● <font color="red"><b><a href="sonicr/r/rchara.html">An action race featuring Sonic and the rest</a></b></font><b> of his friends and rivals.</b> 
       </td>
 </tr>
 <tr>
 <td>
-このゲームでは、ソニックをはじめとしたソニックファミリーキャラクターが登場します。　<br>
-ソニックの『スピンダッシュ』や、マイルスの『飛行』など、ソニックに登場したキャラクターはおなじみの特殊能力を持っており、
-プレイヤーは各キャラクターの特殊能力をうまく使ってレースに挑みます。<br>
-更に、プレイ可能な隠しキャラクターも存在してキャラクター毎の攻略に奥深さが増します。
+In this game, Sonic and other Sonic series characters appear.　<br>
+Sonic's Spin Dash, Tails' Flight, and other Sonic characters have special abilities that we are all familiar with. The player must use the special abilities of each character to challenge the race.<br>
+Furthermore, there are hidden characters that can be played, adding depth to the strategy of each character.
 </td>
 </tr>
 <tr>
