finished up work that was supposed to be for yesterday

--- a/japan/sonic3d.1
+++ b/japan/sonic3d.1
@@ -14,16 +14,15 @@ Sonic 3D: Flickies' Island
     </div>
   <tr>
     <td height=60 colspan=2>
-      <div align="center"><font color="#ff0000" size=2> Sonic 3D: Flickies' Island<br>
-        <BLINK>Supported models: Sega Saturn</BLINK><br>
-        Release date: October 14, 1999<br>
-        Price: \3,800 (\3,990 including tax)</font><br>
+      <div align="center"><font color="#ff0000" size=2>Sonic 3D: Flickies' Island<br>
+        <BLINK>Platform: Sega Saturn</BLINK><br>
+        Release date: November 1996 (NA), February 14, 1997 (EU), October 14, 1999 (JP)<br>
+        Price: 3,800 yen (3,990 yen including tax) (JP), Unknown (NA), 44.99 pounds (UK)</font><br>
       </div>
       <P align="center"> <a href="http://www.d-direct.ne.jp/"> </a><a href="http://www.d-direct.ne.jp/"><font color="#ff0000"><blink></blink></font></a><br>
-      <P align="center"> <font color="#0000ff" font size=4>Å° Sonic 3D for the Sega Saturn is finally here! 
-        Å°</font><br>
-      <P align="center"> Sonic fans in Japan have been waiting a long time!<br>
-        After being released in the US and Europe, Sonic 3D is finally ready to be delivered to people in Japan.<br>
+      <P align="center"> <font color="#0000ff" font size=4>Sonic 3D for the Sega Saturn is finally here!</font><br>
+      <P align="center">Sonic fans in Japan have been waiting a long time!<br>
+        After being released in the US and Europe. Sonic 3D is finally ready to be delivered to people in Japan.<br>
         Oh, and it's being released at the same time as Sonic Adventure International on the Dreamcast!<br>
       <p align="center"> 
       <hr width=60% align="center">
@@ -38,27 +37,26 @@ Sonic 3D: Flickies' Island
           </tr>
         </table>
       </div>
-      <p align="center"> <font color="#0000ff" font size=4>Å° Protect Flickies from Dr. Robotnik! 
-        Å°</font><br>
-      <P align="center"> Chaos Emerald - A beautiful gem with mystical powers.<br>
-      <P align="center"> One day, Sonic, Tails, and Knuckles are on a mysterious island.<font color="#ff00ff">"Flicky Island"</font>was its name.<br>
-        According to legend, the<font color="#ff00ff">Chaos Emeralds</font>lie dormant on this island.<br>
-        The first thing Sonic and his friends decided to do was to look for birds called <font color="#ff00ff">Flickies</font>, which were the clues to the gems.<br
+      <p align="center"> <font color="#0000ff" font size=4>Protect Flickies from Dr. Robotnik!</font><br>
+      <P align="center">Chaos Emerald, a beatiful gem with mystical powers.<br>
+      <P align="center">One day, Sonic, Tails, and Knuckles are visiting a mysterious island. <font color="#ff00ff">Flicky Island </font>is its name.<br>
+        According to legend, the <font color="#ff00ff">Chaos Emeralds </font>lie dormant on this island.<br>
+        The first thing Sonic and his friends decided to do was to look for a bird called <font color="#ff00ff">Flicky</font>, which was the clue to the gems.<br
 >
-      <P align="center"> But at the same time, a spy satellite hovers eerily in the sky, far away.<br>
+      <P align="center">But at the same time, a spy satellite hovers eerily in the sky, far away.<br>
         "I've finally found Flicky Island, home of the <font color="#ff00ff">Chaos Emeralds</font>!"<br>
         I've heard that dumb voice before... yes, it's the evil genius scientist, <font color="#ff00ff">Dr. Robotnik</font>!<br>
-      <P align="center"> Will Sonic be able to rescue the Flickies and find the Chaos Emeralds before Dr. Robotnik does?<br>
-      <p align="center"> <a href="sonic3d/sonic3d_image.html"> <IMG border=0 SRC="sonic3d/01_eps.jpg"></a><BR>
-        <font size=4 FONT COLOR="RED"> <A HREF="sonic3d/sonic3d_image.html">Go to Sonic 3D screen shots!</A></FONT><BR>
+      <P align="center"> Will Sonic be able to rescue Flicky and the others and find the Chaos Emeralds before Dr. Robotnik does?<br>
+      <p align="center"> <a href="sonic3d_image.html"> <IMG border=0 SRC="01_eps.jpg"></a><BR>
+        <font size=4 FONT COLOR="RED"> <A HREF="sonic3d_image.html">Go to Sonic 3D screen shots!</A></FONT><BR>
       <table width="620" align="center">
         <tr><td height=16 colspan=2></td>
 <tr><td align="center" colspan=2 bgcolor="red"><font size=2 color="#ffffff">
-ÅbÅ@Presented By Å@<b>Sonic Team 1999</b>Å@Åb
+Presented By <b>Sonic Team 1999</b>
 </font></td>
 
 </table>
-      <p align="center"><a href="http://www.sonicteam.com/" target="_top"><font size="2"><b>ñﬂÇÈ</b></font></a></p>
+      <p align="center"><a href="http://www.sonicteam.com/" target="_top"><font size="2"><b>Return</b></font></a></p>
     </center>
 
 </body>
