Initial translation work

--- a/japan/sonic3d.1
+++ b/japan/sonic3d.1
@@ -38,7 +38,7 @@ Sonic 3D: Flickies' Island
         </table>
       </div>
       <p align="center"> <font color="#0000ff" font size=4>Protect Flickies from Dr. Robotnik!</font><br>
-      <P align="center">Chaos Emerald, a beatiful gem with mystical powers.<br>
+      <P align="center">Chaos Emerald, a beautiful gem with mystical powers.<br>
       <P align="center">One day, Sonic, Tails, and Knuckles are visiting a mysterious island. <font color="#ff00ff">Flicky Island </font>is its name.<br>
         According to legend, the <font color="#ff00ff">Chaos Emeralds </font>lie dormant on this island.<br>
         The first thing Sonic and his friends decided to do was to look for a bird called <font color="#ff00ff">Flicky</font>, which was the clue to the gems.<br
